# OpsBatch

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
scripts/: windows-sign.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  opsbatch.exe.manifest  tauri.conf.json  tauri.updater.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: windows-sign.ps1
src-tauri/src/: keychain.rs  lib.rs  main.rs  security.rs  tls.rs
src-tauri/src/commands/: ai.rs  app_log.rs  app_update.rs  asciinema.rs  clipboard.rs  cloud.rs  devtools.rs  diagnostics.rs  execution.rs  forward.rs  github.rs  github_git.rs  groups.rs  hosts.rs  import.rs  library.rs  local_fs.rs  mcp.rs  mod.rs  proxyjump.rs  quick_actions.rs  rag.rs  settings.rs  sftp.rs  system.rs  tags.rs  terminal.rs  terminal_shell.rs  transfer.rs  vnc.rs  window.rs  workflow.rs
src-tauri/src/commands/rdp/: audio.rs  clipboard.rs  clipboard_files.rs  config.rs  dynamic_channels.rs  egfx.rs  file_transfer.rs  frame.rs  input.rs  mod.rs  protocol.rs  rdpevor.rs  tests.rs  types.rs  webrtc.rs
src-tauri/src/commands/rdp/tests/: frame.rs
src-tauri/src/commands/vnc/: config.rs  manager.rs  types.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ssh/: host_key.rs  mod.rs
tests/: backgroundCommand.test.ts  commandPlanParser.test.ts  dragDropTarget.test.ts  globalLogger.test.ts  hostMonitor.test.ts  linuxBatchActions.test.ts  localPerformance.test.ts  minimizeToTray.test.ts  pathNames.test.ts  popconfirmEventPropagation.test.ts  proxySettings.test.ts  rdpAgentExecutor.test.ts  rdpAiActionParser.test.ts  rdpFrameQueue.test.ts  rdpH264DirectCapability.test.ts  rdpSettingsDefaults.test.ts  remoteScriptCommand.test.ts  remoteWindowDisconnect.test.ts  sftpRemoteCreateFileMenu.test.ts  sshConnectionStability.test.ts  tauriCapabilities.test.ts  tauriUpdaterReleaseWorkflow.test.ts  terminalAuth.test.ts  terminalSearch.test.ts  terminalTabs.test.ts  updateModalManualCheck.test.ts  vncRemoteConnection.test.ts  windowControlsMinimizeToTray.test.ts  windowsDiagnosticsLog.test.ts  (+3 more)
website/: README.md  (+8 more)
(+139 files in other folders)
