[package]
name = "opsbatch"
version = "0.1.0"
description = "OpsBatch - 批量运维管理工具"
authors = ["mio"]
edition = "2021"

[lib]
name = "opsbatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
russh = { version = "=0.61.1", features = ["aws-lc-rs"] }
russh-sftp = "2.3"
ironrdp = { version = "0.15", features = ["connector", "session", "input", "graphics", "svc", "dvc", "displaycontrol", "cliprdr", "rdpsnd"] }
ironrdp-egfx = "0.1"
ironrdp-dvc = { version = "0.6", features = ["opsbatch-diagnostics"] }
ironrdp-tokio = { version = "0.9", features = ["reqwest"] }
ironrdp-tls = { version = "0.2", features = ["rustls"] }
webrtc = "0.17.1"
media = { package = "webrtc-media", version = "0.17.1" }
interceptor = "0.17.1"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std"] }
arboard = { version = "3.6", default-features = false }
rodio = { version = "0.22", default-features = false, features = ["playback"] }
portable-pty = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
aes-gcm = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
futures-util = "0.3"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
libz-sys = { version = "1.1", features = ["static"] }
dashmap = "6"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
keyring = { version = "3", features = ["windows-native", "sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[patch.crates-io]
ironrdp-egfx = { path = "vendor/ironrdp-egfx-0.1.0" }
ironrdp-dvc = { path = "vendor/ironrdp-dvc-0.6.0" }
ironrdp-connector = { path = "vendor/ironrdp-connector-0.9.0" }
picky = { path = "vendor/picky-7.0.0-rc.23" }
picky-krb = { path = "vendor/picky-krb-0.12.3" }
sspi = { path = "vendor/sspi-0.21.0" }
